ascon.h

/**
 * Length in bytes of the digest generated by the fixed-size (non-xof) hash
 * function.
 */
#define ASCON_HASH_DIGEST_LEN 32U
/**
 * Enum to denote Ascon variants.
 */
typedef enum 
{
  ASCON_HASH = 0, 
  ASCON_HASHA, 
  ASCON_XOF, 
  ASCON_XOFA,
} ascon_variant_t;
/**
 * Internal cipher sponge state associated with a buffer holding for
 * less-than-rate updates. Used for the Init-Update-Final implementation.
 */
typedef struct ascon_bufstate
{
    /** Cipher sponge state. */
    ascon_sponge_t sponge;

    /** Buffer caching the less-than-rate long input between update calls. */
    uint8_t buffer[ASCON_DOUBLE_RATE];

    /** Currently used bytes of the buffer. */
    uint8_t buffer_len;

    /**
     * State of the order of Init-Update-Final function calls, checked to
     * know when to finalise the associated data processing and for the
     * runtime assertions on the correct order of the functions.
     *
     * @see #ASCON_INPUT_ASSERTS
     *
     * Note: this variable is not semantically relevant in THIS struct,
     * as it should belong in the struct ascon_aead_ctx_t, but by having it
     * here we spare bytes of padding (7 on 64-bit systems, 3 on 32-bit,
     * 1 on 16-bit) at the end of the struct ascon_aead_ctx_t, by using some
     * of the padding space this struct anyway has.
     */
    uint8_t flow_state;

    /** Variable to distinguish between Ascon variants.*/
    uint8_t variant;


    /** Unused padding to the next uint64_t (sponge.x0 or ctx.k0)
     * to avoid errors when compiling with `-Wpadding` on any platform. */
    uint8_t pad[];
} ascon_bufstate_t;
/** Cipher context for hashing. */
typedef ascon_bufstate_t ascon_hash_ctx_t;
/**
 * Cipher context creation for Ascon hashing streaming mode. (Cython)
 *
 * Allocates memory on the heap for the cipher-context struct and
 * returns a pointer to it. This is necessary for the Cython implementation
 * of the streaming mode, as the state is required to be a C-type struct for
 * further operation in C, but is stored externally in a Cython wrapper.
 */
ascon_hash_ctx_t* new_hash_ctx();
/**
 * Freeing of the allocated memory for the cipher context for
 * Ascon hashing.
 *
 * This function is called when the Cython object that handles
 * the hashing is deleted.
 *
 *
 * @param[in, out] ctx pointer to the memory to be freed.
 */
ASCON_API void
ascon_hash_free(ascon_hash_ctx_t* const ctx);
// ASCON_API bool
// ascon_aead_is_tag_valid_intermediate(const uint8_t* expected_tag,
//                                         size_t expected_tag_len,
//                                         const uint8_t* actual_tag[expected_tag_len],
//                                         size_t actual_tag_len);

/**
 * Offline Ascon-Hash with fixed digest length.
 *
 * Hashes the data, which is already available as a whole in a contiguous
 * buffer, and provides the digest for it.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @image html hash.png
 *
 * @remark
 * This function can be used for keyed hashing to generate a MAC by simply
 * prepending a secret key to the message, like `ascon_hash(key || msg)`. There
 * is **no need to build an HMAC** construct around it, as it does not suffer
 * from length-extension vulnerabilities.
 *
 * @param[out] digest fingerprint of the message, output of the hash function,
 *       of #ASCON_HASH_DIGEST_LEN bytes.
 * @param[in] data message fed into the hash function.
 * @param[in] data_len length of \p data in bytes.
 */
ASCON_API void
ascon_hash(uint8_t digest[ASCON_HASH_DIGEST_LEN],
           const uint8_t* data,
           size_t data_len);
/**
 * Online Ascon-Hash with fixed digest length, initialisation.
 *
 * Prepares to start a new hashing session to get a digest of
 * #ASCON_HASH_DIGEST_LEN bytes.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @image html hash.png
 *
 * @remark
 * This function can be used for keyed hashing to generate a MAC by simply
 * prepending a secret key to the message, like `ascon_hash(key || msg)`. There
 * is **no need to build an HMAC** construct around it, as it does not suffer
 * from length-extension vulnerabilities.
 *
 * @warning
 * Do not mix Init-Update-Final functions of Ascon-Hash and Ascon-XOF.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 */
// ASCON_API void
// ascon_hash_init(ascon_hash_ctx_t* ctx);

/**
 * Online Ascon-Hasha with fixed digest length, initialisation.
 *
 * Prepares to start a new hashing session to get a digest of
 * #ASCON_HASH_DIGEST_LEN bytes.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @image html hash.png
 *
 * @remark
 * This function can be used for keyed hashing to generate a MAC by simply
 * prepending a secret key to the message, like `ascon_hash(key || msg)`. There
 * is **no need to build an HMAC** construct around it, as it does not suffer
 * from length-extension vulnerabilities.
 *
 * @warning
 * Do not mix Init-Update-Final functions of Ascon-Hash and Ascon-XOF.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 */
ASCON_API void
ascon_hasha_init(ascon_hash_ctx_t* ctx);
/**
 * Online Ascon-Hash with fixed digest length, feeding data to hash.
 *
 * Feeds a chunk of data to the already initialised hashing session.
 *
 * In case of no data at all to be hashed, this function can be called (also
 * many times) with \p data_len set to 0. Iff that is the case, \p data can be
 * set to NULL.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 * @param[in] data bytes to be hashes. May be NULL iff \p data_len is 0.
 * @param[in] data_len length of the \p data pointed by in bytes. May be 0.
 */
// ASCON_API void
// ascon_hash_update(ascon_hash_ctx_t* ctx,
//                   const uint8_t* data,
//                   size_t data_len);

/**
 * Online Ascon-Hasha with fixed digest length, feeding data to hash.
 *
 * Feeds a chunk of data to the already initialised hashing session.
 *
 * In case of no data at all to be hashed, this function can be called (also
 * many times) with \p data_len set to 0. Iff that is the case, \p data can be
 * set to NULL.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 * @param[in] data bytes to be hashes. May be NULL iff \p data_len is 0.
 * @param[in] data_len length of the \p data pointed by in bytes. May be 0.
 */
ASCON_API void
ascon_hasha_update(ascon_hash_ctx_t* ctx,
                   const uint8_t* data,
                   size_t data_len);
/**
 * Online Ascon-Hash with fixed digest length, finalisation and digest
 * generation.
 *
 * Finalises the hashing by returning the digest of the message.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @warning
 * In case the hashing session is interrupted and never finalised (this function
 * is never called), clear the context with ascon_hash_cleanup() to erase any
 * information about the hashed content, especially in case keyed hashing is
 * performed.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. It will be erased
 *       securely before this function returns. Not NULL.
 * @param[out] digest fingerprint of the message, output of the hash function,
 *       of #ASCON_HASH_DIGEST_LEN bytes.
 */
ASCON_API void
ascon_hash_final(ascon_hash_ctx_t* ctx,
                 uint8_t digest[ASCON_HASH_DIGEST_LEN]);
/**
 * Online Ascon-Hasha with fixed digest length, finalisation and digest
 * generation.
 *
 * Finalises the hashing by returning the digest of the message.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @warning
 * In case the hashing session is interrupted and never finalised (this function
 * is never called), clear the context with ascon_hash_cleanup() to erase any
 * information about the hashed content, especially in case keyed hashing is
 * performed.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. It will be erased
 *       securely before this function returns. Not NULL.
 * @param[out] digest fingerprint of the message, output of the hash function,
 *       of #ASCON_HASH_DIGEST_LEN bytes.
 */
ASCON_API void
ascon_hasha_final(ascon_hash_ctx_t* ctx,
                  uint8_t digest[ASCON_HASHA_DIGEST_LEN]);
/**
 * Online Ascon-Hash with custom digest length (eXtendable Output Function,
 * XOF), initialisation.
 *
 * Prepares to start a new hashing session to get a digest of custom length.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @image html hash.png
 *
 * @remark
 * This function can be used for keyed hashing to generate a MAC by simply
 * prepending a secret key to the message, like `ascon_hash_xof(key || msg)`.
 * There is **no need to build an HMAC** construct around it, as it does not
 * suffer from length-extension vulnerabilities.
 *
 * @warning
 * Do not mix Init-Update-Final functions of Ascon-Hash and Ascon-XOF.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 */
ASCON_API void
ascon_hash_xof_init(ascon_hash_ctx_t* ctx);
/**
 * Online Ascon-Hasha with custom digest length (eXtendable Output Function,
 * XOF), initialisation.
 *
 * Prepares to start a new hashing session to get a digest of custom length.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @image html hash.png
 *
 * @remark
 * This function can be used for keyed hashing to generate a MAC by simply
 * prepending a secret key to the message, like `ascon_hash_xof(key || msg)`.
 * There is **no need to build an HMAC** construct around it, as it does not
 * suffer from length-extension vulnerabilities.
 *
 * @warning
 * Do not mix Init-Update-Final functions of Ascon-Hash and Ascon-XOF.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 */
ASCON_API void
ascon_hasha_xof_init(ascon_hash_ctx_t* ctx);
/**
 * Online Ascon-Hash with custom digest length (eXtendable Output Function,
 * XOF), feeding data to hash.
 *
 * Feeds a chunk of data to the already initialised hashing session.
 *
 * In case of no data at all to be hashed, this function can be called (also
 * many times) with \p data_len set to 0. Iff that is the case, \p data can be
 * set to NULL.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 * @param[in] data bytes to be hashes. May be NULL iff \p data_len is 0.
 * @param[in] data_len length of the \p data pointed by in bytes. May be 0.
 */
ASCON_API void
ascon_hash_xof_update(ascon_hash_ctx_t* ctx,
                      const uint8_t* data,
                      size_t data_len);
/**
 * Online Ascon-Hasha with custom digest length (eXtendable Output Function,
 * XOF), feeding data to hash.
 *
 * Feeds a chunk of data to the already initialised hashing session.
 *
 * In case of no data at all to be hashed, this function can be called (also
 * many times) with \p data_len set to 0. Iff that is the case, \p data can be
 * set to NULL.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. Not NULL.
 * @param[in] data bytes to be hashes. May be NULL iff \p data_len is 0.
 * @param[in] data_len length of the \p data pointed by in bytes. May be 0.
 */
ASCON_API void
ascon_hasha_xof_update(ascon_hash_ctx_t* ctx,
                       const uint8_t* data,
                       size_t data_len);
/**
 * Online Ascon-Hash with custom digest length (eXtendable Output Function,
 * XOF), finalisation and digest generation.
 *
 * Finalises the hashing by returning the digest of the message.
 *
 * Uses 12-round `Pb` permutations during absorption and squeezing.
 *
 * @warning
 * To have 128 bits of security against birthday attacks (collisions),
 * a digest length of at least 256 bits (32 bytes) is recommended. Against
 * quantum computers, the hash size should be double the amount of wanted
 * security bits.
 *
 * @warning
 * In case the hashing session is interrupted and never finalised (this function
 * is never called), clear the context with ascon_hash_cleanup() to erase any
 * information about the hashed content, especially in case keyed hashing is
 * performed.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. It will be erased
 *       securely before this function returns. Not NULL.
 * @param[out] digest fingerprint of the message, output of the hash function,
 *       of \p digest_size bytes.
 * @param[in] digest_len desired length of the \p digest in bytes.
 */
ASCON_API void
ascon_hash_xof_final(ascon_hash_ctx_t* ctx,
                     uint8_t* digest,
                     size_t digest_len);
/**
 * Online Ascon-Hasha with custom digest length (eXtendable Output Function,
 * XOF), finalisation and digest generation. (Cython-intermediate)
 *
 * Finalises the hashing by returning the digest of the message. This
 * function doesn't apply any changes to the state. Instead it makes a
 * disposable copy on the stack to which all chages are applied. The
 * memory of the copy will be cleared before returning from this funcion.
 *
 * Uses 8-round `Pb` permutations during absorption and squeezing, lighter
 * version of the Ascon-Hash function.
 *
 * @warning
 * To have 128 bits of security against birthday attacks (collisions),
 * a digest length of at least 256 bits (32 bytes) is recommended. Against
 * quantum computers, the hash size should be double the amount of wanted
 * security bits.
 *
 * @warning
 * In case the hashing session is interrupted and never finalised (this function
 * is never called), clear the context with ascon_hash_cleanup() to erase any
 * information about the hashed content, especially in case keyed hashing is
 * performed.
 *
 * @param[in, out] ctx the hashing context, handling the hash function state
 *       and buffering of incoming data to be processed. All changes are applied
 *       to a copy. Not NULL.
 * @param[out] digest fingerprint of the message, output of the hash function,
 *       of \p digest_size bytes.
 * @param[in] digest_len desired length of the \p digest in bytes.
 */
ASCON_API void
ascon_hasha_xof_final(ascon_hash_ctx_t* ctx,
                      uint8_t* digest,
                      size_t digest_len);
/**
 * Security cleanup of the hashing context, in case the online
 * processing is not completed to the end.
 *
 * Use this function only when something goes wrong between the calls of
 * online hashing or decryption, and you never call the ascon_hash_final()
 * or ascon_hash_xof_final() or ascon_hasha_final()
 * or ascon_hasha_xof_final() functions (because these functions perform the
 * cleanup automatically).
 *
 * This is to prevent any information to leak through the context in case an
 * hashing transaction is rolled back/abruptly terminated, especially parts of
 * a key (for keyed hashing) still buffered in the context.
 *
 * @param[in, out] ctx to erase.
 */
ASCON_API void
ascon_hash_cleanup(ascon_hash_ctx_t* ctx);